[package]
name = "ssb-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-query = { path = "../ssb-query" }
ssb-markdown = { path = "../ssb-markdown" }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
