[package]
name = "ssb-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-ref = { path = "../ssb-ref" }
ssb-msg = { path = "../ssb-msg" }
ssb-db = { path = "../ssb-db" }
ssb-markdown = { path = "../ssb-markdown" }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
progress_bar = "1.0.3"
simple-home-dir = "0.1.2"
