[package]
name = "ssb-flume-follower-sql"
version = "0.1.0"
edition = "2021"
authors = ["Piet Geursen <pietgeursen@gmail.com>", "Michael Williams <hello@mikey.nz>"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
failure = "0.1.3"
failure_derive = "0.1.3"
r2d2 = "0.8.3"
r2d2_sqlite = "0.8.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
private-box = "0.4.5"
base64 = "0.10.0"
itertools = "0.8.0"
flumedb = "0.1.6"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled", "serde_json", "load_extension"]

[dev-dependencies]
env_logger = "0.6.0"
criterion = "0.2.5"
