[package]
name = "ssb-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
ssb-ref = { path = "../ssb-ref" }
regex = "1.8.1"
lazy_static = "1.4.0"

[dev-dependencies]
pulldown-cmark-to-cmark = "10.0.4"
