[package]
name = "ssb-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-ref = { path = "../ssb-ref" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
thiserror = "1.0.40"
