[package]
name = "ssb-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-core = { path = "../ssb-core" }
ssb-query = { path = "../ssb-query" }
ssb-markdown = { path = "../ssb-markdown" }
axohtml = "0.5.0"
