[package]
name = "ssb-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssb-ref = { path = "../ssb-ref" }
ssb-msg = { path = "../ssb-msg" }
ssb-db = { path = "../ssb-db" }
ssb-markdown = { path = "../ssb-markdown" }
axohtml = "0.5.0"
serde_json = "1.0.96"
