[package]
name = "ssb-query"
version = "0.1.0"
edition = "2021"
authors = ["Piet Geursen <pietgeursen@gmail.com>", "Michael Williams <hello@mikey.nz>"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.40"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
base64 = "0.21.0"
itertools = "0.10.5"
flumedb = "0.1.6"
private-box = "0.6.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled", "serde_json", "load_extension"]
