[package]
name = "ssb-ref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hashtag-regex = "0.1.1"
lazy_static = "1.4.0"
regex = "1.8.1"
serde = "1.0.162"
serde_with = "3.0.0"
thiserror = "1.0.40"
urlencoding = "2.1.2"
